Improved the HUG 'out' macro for GTK3.

--- a/gtk-server/documentation/gtk-server.cfg.1
+++ b/gtk-server/documentation/gtk-server.cfg.1
@@ -56,7 +56,7 @@ base64 encoded binary data to the GTK-server. The POINTER type can be used for g
 libraries. The ENUM type is used to define an enumeration name (see below).
 
 The MACRO type can be used in case a user function needs to be registered. In case GTK must execute a user
-function, the described macro will be used. A MACRO type always needs an DATA type, in which additional data
+function, the described macro will be used. A MACRO type always needs a DATA type, in which additional data
 can be specified. Macros are explained in the MACRO section of this manpage.
 
 The 'gtk\-server.cfg' file may not contain duplicate function definitions. This is verified
