--- a/gtk-server/documentation/gtk-server.1
+++ b/gtk-server/documentation/gtk-server.1
@@ -370,6 +370,12 @@ the X header files. If the 'KeyPressMask' has a value of 1, it should be connect
 
 gtk_server_connect <formID> 1
 .TP
+.B gtk_server_cfg
+When the GTK-server is compiled as a library, then this command can set the location of the log file and other options. Example:
+
+.br
+gtk_server_cfg -log=/tm/gtk-server.log -post=.
+.TP
 .B gtk_server_state
 Returns the value of a state key if it is pressed. If SHIFT is pressed, a '1' is returned, if CTRL is pressed '4', if ALT is pressed '8' and so on.
 It is required to connect the 'key-press-event' to the widget first, otherwise the event is not recognized by GTK. For example:
