--- a/gtk-server/documentation/gtk-server.1
+++ b/gtk-server/documentation/gtk-server.1
@@ -149,6 +149,9 @@ The GTK\-server will start a small graphical panel containing the output of the 
 between client script and GTK\-server. Three buttons are visible: (1) the "Step" button to execute
 the input from the client script line by line, (2) the "Run" button to let the client script execute its
 commands all at once, and (3) a "Quit" button to stop the GTK\-server altogether.
+.TP
+.B -nonl
+By default, the GTK\-server adds a newline after each reply. This option will prevent this from happening.
 
 .SH "SHEBANG"
 .PP
