--- a/gtk-server/documentation/gtk-server.1
+++ b/gtk-server/documentation/gtk-server.1
@@ -146,9 +146,10 @@ the SSL certificate's key if the key was encrypted.
 .TP
 .B -debug
 The GTK\-server will start a small graphical panel containing the output of the information exchange
-between client script and GTK\-server. Three buttons are visible: (1) the "Step" button to execute
+between client script and GTK\-server. Four buttons are visible: (1) the "Step" button to execute
 the input from the client script line by line, (2) the "Run" button to let the client script execute its
-commands all at once, and (3) a "Quit" button to stop the GTK\-server altogether.
+commands all at once, (3) the "Pause" button to pause such execution and (4) a "Quit" button to stop the
+GTK\-server altogether.
 .TP
 .B -nonl
 By default, the GTK\-server adds a newline after each reply. This option will prevent this from happening.
