Updates in gtk_server_state for Motif.

--- a/gtk-server/documentation/gtk-server.1
+++ b/gtk-server/documentation/gtk-server.1
@@ -407,7 +407,7 @@ gtk_server_cfg -log=/tm/gtk-server.log -post=.
 .B gtk_server_state
 Returns the value of a state key if it is pressed. If SHIFT is pressed, a '1' is returned, if CTRL is pressed '4', if ALT is pressed '8' and so on.
 It is required to connect the 'key-press-event' to the widget first, otherwise the event is not recognized by GTK. This function is not available
-when the GTK-server has been compiled for the XForms or Motif backend. Example:
+when the GTK-server has been compiled for the XForms backend. Example:
 
 .br
 gtk_server_connect <widgetID> "key-press-event" "keypressed"
