--- a/gtk-server/documentation/gtk-server.cfg.1
+++ b/gtk-server/documentation/gtk-server.cfg.1
@@ -143,7 +143,14 @@ FUNCTION_NAME = gdk_window_get_pointer, NONE, WIDGET, 4, WIDGET, PTR_INT, PTR_IN
 In this case, a call to 'gdk_window_get_pointer' will return a widget but also the values stored in the
 second and third argument. The returned result will be formatted in S-expression syntax, just as
 the GTK-server also accepts S-expression syntax. Next to the type PTR_INT the types PTR_LONG, PTR_FLOAT,
-PTR_DOUBLE, PTR_STRING, PTR_BOOL and PTR_WIDGET can be used.
+PTR_DOUBLE, PTR_STRING, PTR_BOOL, PTR_WIDGET and PTR_BASE64 can be used.
+
+When using PTR_BASE64, the function argument will return a Base64 encoded string which contains binary data.
+Before calling the actual function, make sure to first set the memory layout of the binary data with the internal
+gtk_server_data_format function.
+
+After that, the returned Base64 string can be decoded using the internal gtk_server_unpack function.
+
 .SH "Macros"
 In GTK sometimes more than one function is needed to define a widget. These functions can be
 grouped into a macro. From a clientscript the name of the macro can be used to invoke the macro. A 
