--- a/gtk-server/documentation/gtk-server.cfg.1
+++ b/gtk-server/documentation/gtk-server.cfg.1
@@ -143,7 +143,7 @@ FUNCTION_NAME = gdk_window_get_pointer, NONE, WIDGET, 4, WIDGET, PTR_INT, PTR_IN
 In this case, a call to 'gdk_window_get_pointer' will return a widget but also the values stored in the
 second and third argument. The returned result will be formatted in S-expression syntax, just as
 the GTK-server also accepts S-expression syntax. Next to the type PTR_INT the types PTR_LONG, PTR_FLOAT,
-PTR_DOUBLE, PTR_STRING, PTR_BOOL, PTR_WIDGET and PTR_BASE64 can be used.
+PTR_DOUBLE, PTR_STRING, PTR_BOOL, PTR_SHORT, PTR_WIDGET and PTR_BASE64 can be used.
 
 When actually invoking the defined function, a dummy argument can be used in case of the numeric PTR argument
 types. Also the PTR_BASE64 type should have a dummy argument in place.
